Upgrade to Ng 21.0.0 Step 1

--- a/fe-designer/src/app/app.html
+++ b/fe-designer/src/app/app.html
@@ -75,7 +75,9 @@
   (onSave)="handleSaveReport($event)"
   (onCancel)="handleCancelSaveReport()">
 </app-save-report-dialog>
-<app-publish-template-dialog *ngIf="showPublishDialog()" (onClose)="handlePublishDialogClosed()"></app-publish-template-dialog>
+@if (showPublishDialog()) {
+  <app-publish-template-dialog (onClose)="handlePublishDialogClosed()"></app-publish-template-dialog>
+}
 
 @if (showSettingsDialog()) {
   <app-options-dialog
