--- a/fe-designer/src/styles/theme.less
+++ b/fe-designer/src/styles/theme.less
@@ -203,6 +203,11 @@
 @canvas-bg-dark: hsl(220, 6%, 18%);
 @workspace-bg-dark: hsl(220, 8%, 12%);
 
+// Layout role backgrounds
+@layout-role-header-bg: #fff9f3; /*#F3F9FF*/
+@layout-role-body-bg: #FFFFFF;
+@layout-role-footer-bg: #fff9f3;
+
 // A4 Paper Dimensions
 @a4-width-mm: 210;
 @a4-height-mm: 297;
