--- a/fe-designer/src/app/designer/table-element/cell-editor-dialog.less
+++ b/fe-designer/src/app/designer/table-element/cell-editor-dialog.less
@@ -168,7 +168,7 @@
 }
 
 :host ::ng-deep .ql-font-kix-barcode {
-  font-family: 'KIX Barcode';
+  font-family: 'KIX Barcode', sans-serif;
 }
 
 :host ::ng-deep .ql-toolbar.ql-snow {
